example/compilation/errors/semantic/func_proc/predefined/input_proc.arn
PROG

var x : int;
var name : char;

type tab : array[1:3] of int;

type date : struct 
{
    jour : int;    
    mois : int;
    annee : float;
} fstruct;

var my_struct : date;

input("%d %c", x, name);
input("%d %c", tab[0], name);
input("%d %c", my_struct.jour, name);

// Error: annee is a float
input("%d %c", my_struct.annee, name);
input("%d", my_struct.mois, name);
input("%c %d", name);
